index page created

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -12,7 +12,8 @@ $font-size-base:         1rem;
 
 // Colors
 $body-color: $gray;
-$primary:    $blue;
+$primary:    $pink;
+$btn-primary-color: #ffffff !important; // Couleur du texte dans le bouton
 $success:    $green;
 $info:       $yellow;
 $danger:     $red;
