--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,3 @@
-<h1>Index page</h1>
-
-<%# Ajout d'un boutton pour se connecter %>
-<%= link_to 'Sign in', new_user_session_path %>
-
-<%# Ajout d'un boutton pour se déconnecter %>
-<%= link_to 'Sign out', destroy_user_session_path, data: {turbo_method: :delete} %>
-<!-- Navbar de navigation -->
-
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid"> <!-- Utilisation d'un container-fluid pour occuper toute la largeur -->
     <!-- Logo cliquable avec lien vers la page d'accueil ou autre -->
@@ -38,8 +29,7 @@
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "Action", "#", class: "dropdown-item" %>
               <%= link_to "Another action", "#", class: "dropdown-item" %>
-              <%= link_to "Log out", "#", class: "dropdown-item", data: { turbo_method: :delete } %>
-              <%# link_to "Log out", destroy_user_session_path, class: "dropdown-item", data: { turbo_method: :delete } %>
+              <%= link_to "Log out", destroy_user_session_path, class: "dropdown-item", data: { turbo_method: :delete } %>
             </div>
           </li>
         <%# end %>
