--- a/app/views/users/_navbar.html.erb
+++ b/app/views/users/_navbar.html.erb
@@ -26,15 +26,19 @@
 
           <!-- Dropdown pour afficher des options supplémentaires, par exemple pour se déconnecter -->
           <li class="nav-item dropdown">
-            <%= image_tag "https://media.licdn.com/dms/image/v2/D4E03AQGUalTsRaHsqw/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1718303939374?e=1733961600&v=beta&t=hlajHnwvxCz1EKiOhVN9Cy7MgueQbI5u0mvyGXDPl48", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            <%= image_tag(current_user.photo.attached? ? current_user.photo : 'default_avatar.png',
+                class: "avatar dropdown-toggle",
+                id: "navbarDropdown",
+                data: { bs_toggle: "dropdown" },
+                'aria-haspopup': true,
+                'aria-expanded': false) %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "Action", "#", class: "dropdown-item" %>
               <%= link_to "Another action", "#", class: "dropdown-item" %>
-              <%= link_to "Log out", "#", class: "dropdown-item", data: { turbo_method: :delete } %>
               <%= link_to "Log out", destroy_user_session_path, class: "dropdown-item", data: { turbo_method: :delete } %>
             </div>
           </li>
-        <%# end %>
+        <% end %>
       </ul>
     </div>
   </div>
