Config of Jquery and importmap, adding javascript for index view

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -12,3 +12,7 @@
 
 <!-- Grille pour afficher les cartes des aupairs -->
 <%= render 'users_list' %>
+
+<!-- Script java pour la gestion du filtre nombre d'enfants avec slider -->
+<%= javascript_importmap_tags %>
+<%= javascript_include_tag "controllers/users_index", defer: true %>
