--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,9 +2,9 @@
 
 <!-- Titre principal de la page -->
 <% if current_user.aupair? %>
-  <h1 class="text-center my-4">Trouvez une famille</h1> <!-- Centré et avec marges verticales -->
+  <h1 class="text-center my-4">Find a family</h1> <!-- Centré et avec marges verticales -->
 <% else %>
-  <h1 class="text-center my-4">Trouvez votre au-pair</h1> <!-- Centré et avec marges verticales -->
+  <h1 class="text-center my-4">Find your next au-pair</h1> <!-- Centré et avec marges verticales -->
 <% end %>
 
 <!-- Affichage des filtres -->
