Fix page structure

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -44,7 +44,7 @@
     <div class="row">
       <div class="col-md-3">
         <div class="user-profile-picture">
-          <h1>Coucou</h1>
+
         </div>
       </div>
       <div class="col-md-9">
@@ -55,14 +55,16 @@
     </div>
   </div>
 
-  <div class="row mt-5 bg-white">
-    <div class="col-6 user-details">
-      <p>Coucou</p>
-    </div>
+  <div class="user-details bg-white mt-4">
+    <div class="row">
+      <div class="col-6 user-details-personnal">
+        <p>Coucou</p>
+      </div>
 
-    <div class="col-6 user-location">
-      <p>salut</p>
-    </div>
+      <div class="col-6 user-details-location">
+        <p>salut</p>
+      </div>
 
+    </div>
   </div>
 </div>
