--- a/app/views/users/_filters.html.erb
+++ b/app/views/users/_filters.html.erb
@@ -13,13 +13,12 @@
 
         <!-- Filtres pour les familles -->
 
-        <!-- Dropdown pour la nationalité des familles -->
-        <div class="form-group mx-sm-3 mb-2">
+        <!-- Multiselect pour la nationalité des familles -->
+        <div class="form-group mx-sm-3 mb-2" data-controller="multiselect">
           <%= f.input :nationality, label: "Nationality",
                       as: :select,
-                      collection: [["All nationalities", nil]] + User.family.distinct.pluck(:nationality).map { |n| [n, n] },
-                      selected: params.dig(:filters, :nationality),
-                      input_html: { class: 'form-control' } %>
+                      collection: User.family.distinct.pluck(:nationality).map { |n| [n, n] },
+                      input_html: { id: 'family-nationalities-select', multiple: true, class: 'form-control' }%>
         </div>
 
         <!-- Dropdown pour le nombre d'enfants maximum -->
@@ -38,12 +37,12 @@
 
         <div class="row">
           <div class="col-md-6">
-            <!-- Dropdown pour la nationalité des au pairs -->
-            <div class="form-group mx-sm-3 mb-2">
+            <!-- Multiselect pour la nationalité des au pairs -->
+            <div class="form-group mx-sm-3 mb-2" data-controller="multiselect">
               <%= f.input :nationality, label: "Nationalities",
                           as: :select,
-                          collection: User.distinct.pluck(:nationality),
-                          input_html: { id: 'nationalities-select', multiple: true, class: 'form-control' }%>
+                          collection: User.aupair.distinct.pluck(:nationality),
+                          input_html: { id: 'aupair-nationalities-select', multiple: true, class: 'form-control' }%>
             </div>
           </div>
 
@@ -59,7 +58,7 @@
           </div>
         </div>
 
-        <!-- Filtre sur les langues parlées -->
+        <!-- Multiselect pour les langues parlées par les au pairs -->
         <div data-controller="multiselect">
           <div class="form-group mx-sm-3 mb-2">
             <%= f.input :languages, label: "Languages",
@@ -71,7 +70,7 @@
 
         <div class="row">
           <div class="col-md-6">
-            <!-- Utilisation de champs HTML natifs pour la date de début (au plus tôt) -->
+            <!-- Date de début au plus tôt -->
             <div class="form-group mx-sm-3 mb-2">
               <label>Start Date (Earliest):</label>
               <input type="date" class="form-control" name="filters[start_date_min]"
@@ -79,7 +78,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <!-- Utilisation de champs HTML natifs pour la date de début (au plus tard) -->
+            <!-- Date de début au plus tard -->
             <div class="form-group mx-sm-3 mb-2">
               <label>Start Date (Latest):</label>
               <input type="date" class="form-control" name="filters[start_date_max]"
@@ -90,14 +89,14 @@
 
         <div class="row">
           <div class="col-md-6">
-          <!-- Filtre sur la durée du séjour (durée minimum) -->
+            <!-- Durée minimum du séjour -->
             <div class="form-group mx-sm-3 mb-2">
               <%= f.input :min_duration, label: "Minimum Duration (days)", as: :integer,
                           input_html: { class: 'form-control', min: 1, value: params.dig(:filters, :min_duration) || 1  } %>
             </div>
           </div>
-          <!-- Filtre sur la durée du séjour (durée maximum) -->
           <div class="col-md-6">
+            <!-- Durée maximum du séjour -->
             <div class="form-group mx-sm-3 mb-2">
               <%= f.input :max_duration, label: "Maximum Duration (days)", as: :integer,
                           input_html: { class: 'form-control', min: 1, value: params.dig(:filters, :max_duration) || @max_duration } %>
