Change informations displayed

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -60,14 +60,14 @@
     <div class="row mt-4">
       <div class="col-md-6">
         <div class="card user-description">
-          <p><%= @aupair.nationality %></p>
+          <p><%= @aupair.birth_date %></p>
           <p><%= @aupair.location %></p>
         </div>
       </div>
 
       <div class="col-md-6">
         <div class="card user-location">
-          <p>coucou</p>
+          <p><%= @aupair.nationality %></p>
         </div>
       </div>
     </div>
