--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,14 +5,14 @@
     <div class="row">
       <div class="col-md-3">
         <div class="user-profile-picture m-1">
-          <%= cl_image_tag(@aupair.photo.key, width: 300, height: 300, class: "card-img-top") %>
+          <%= cl_image_tag(@visited_user.photo.key, width: 300, height: 300, class: "card-img-top") %>
         </div>
       </div>
 
       <div class="col-md-9">
         <div class="user-description">
-          <h2><%= "#{@aupair.first_name} #{@aupair.last_name}" %></h2>
-          <p><%= @aupair.description %></p>
+          <h2><%= "#{@visited_user.first_name} #{@visited_user.last_name}" %></h2>
+          <p><%= @visited_user.description %></p>
         </div>
       </div>
     </div>
@@ -21,14 +21,14 @@
     <div class="row mt-4">
       <div class="col-md-6">
         <div class="card user-description">
-          <p><%= @aupair.birth_date %></p>
-          <p><%= @aupair.location %></p>
+          <p><%= @visited_user.birth_date %></p>
+          <p><%= @visited_user.location %></p>
         </div>
       </div>
 
       <div class="col-md-6">
         <div class="card user-location">
-          <p><%= @aupair.nationality %></p>
+          <p><%= @visited_user.nationality %></p>
         </div>
       </div>
     </div>
