Add mapbox to the project

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,6 @@
 @import "components/index";
 @import "components/card";
 @import "pages/index";
+
+// Mapbox css
+@import url("href='https://api.mapbox.com/mapbox-gl-js/v3.7.0/mapbox-gl.css");
