Add a map with user location on the show
Aupairs and Families can now see the location of other users directly on the show thanks to a centered map

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,4 +13,4 @@
 @import "pages/index";
 
 // Mapbox css
-@import url("href='https://api.mapbox.com/mapbox-gl-js/v3.7.0/mapbox-gl.css");
+@import url("https://api.mapbox.com/mapbox-gl-js/v3.7.0/mapbox-gl.css");
