--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,8 +27,10 @@
       </div>
 
       <div class="col-md-6">
-        <div class="card user-location">
-          <p><%= @visited_user.nationality %></p>
+        <div class="card user-location" style="width: 100%; height: 300px;"
+              data-controller="map"
+              data-map-markers-value="<%= @map.to_json %>"
+              data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
         </div>
       </div>
     </div>
