signin page design updated

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
 @import "components/index";
 @import "components/card";
 @import "pages/index";
+@import "components/loginpage";
 
 // Mapbox css
 @import url("https://api.mapbox.com/mapbox-gl-js/v3.7.0/mapbox-gl.css");
