--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
 <% if current_user.aupair? %>
   <h1 class="text-center my-4">Find a family</h1> <!-- Centré et avec marges verticales -->
 <% else %>
-  <h1 class="text-center my-4">Find your next au-pair</h1> <!-- Centré et avec marges verticales -->
+  <h1 class="text-center my-4">Find your next au pair</h1> <!-- Centré et avec marges verticales -->
 <% end %>
 
 <!-- Affichage des filtres -->
