profile pic rendering fixed in the navbar

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,5 +1,7 @@
 .avatar {
   width: 40px;
+  height: 40px; /* Ensure height matches width for round shape */
+  object-fit: cover; /* Ensures image doesn't stretch */
   border-radius: 50%;
 }
 .avatar-large {
